--- a/src/app/components/cons/con-item/con-item.component.html
+++ b/src/app/components/cons/con-item/con-item.component.html
@@ -1,1 +1,9 @@
-<p>con-item works!</p>
+<mat-list-item>
+  <div fxLayout="raw" fxLayoutAlign="space-between">
+    <p>{{con}}</p>
+    <button mat-icon-button color="warn">
+      <mat-icon>remove_circle_outline</mat-icon>
+    </button>
+  </div>
+</mat-list-item>
+<mat-divider></mat-divider>
