--- a/src/app/components/cons/con-item/con-item.component.html
+++ b/src/app/components/cons/con-item/con-item.component.html
@@ -1,7 +1,7 @@
 <mat-list-item>
   <div fxLayout="raw" fxLayoutAlign="space-between">
     <p>{{con}}</p>
-    <button mat-icon-button color="warn">
+    <button mat-icon-button color="warn" (click)="onRemoveCon(con)">
       <mat-icon>remove_circle_outline</mat-icon>
     </button>
   </div>
