add remove dialog, code cleanup

--- a/src/app/components/cons/cons.component.html
+++ b/src/app/components/cons/cons.component.html
@@ -9,9 +9,9 @@
 
   <div class="new_item_input">
     <mat-form-field>
-      <input matInput placeholder="New Con's"/>
+      <input matInput placeholder="New Con's" [(ngModel)]="conTitle"/>
     </mat-form-field>
-    <button mat-icon-button>
+    <button mat-icon-button (click)="addCon()" [disabled]="!conTitle">
       <mat-icon>add_circle_outline</mat-icon>
     </button>
   </div>
